Updates to figures.

--- a/figures/figure_6.ipynb
+++ b/figures/figure_6.ipynb
@@ -2,10 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "appreciated-comparative",
+   "execution_count": 1,
+   "id": "damaged-perception",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "\n",
+      "Attaching package: 'gridExtra'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:dplyr':\n",
+      "\n",
+      "    combine\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(cowplot)\n",
@@ -18,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "stupid-norman",
+   "execution_count": 2,
+   "id": "binding-plain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "patent-climb",
+   "execution_count": 3,
+   "id": "activated-bottle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "accurate-examination",
+   "execution_count": 4,
+   "id": "vietnamese-childhood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "political-investigator",
+   "execution_count": 5,
+   "id": "empirical-palestine",
    "metadata": {},
    "outputs": [
     {
@@ -73,24 +100,24 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'demg_inter'</li><li>'umsmg_inter'</li><li>'nsmg_inter'</li></ol>\n"
+       "<ol class=list-inline><li>'demg_inter'</li><li>'figo_inter'</li><li>'survival_inter'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 'demg\\_inter'\n",
-       "\\item 'umsmg\\_inter'\n",
-       "\\item 'nsmg\\_inter'\n",
+       "\\item 'figo\\_inter'\n",
+       "\\item 'survival\\_inter'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. 'demg_inter'\n",
-       "2. 'umsmg_inter'\n",
-       "3. 'nsmg_inter'\n",
+       "2. 'figo_inter'\n",
+       "3. 'survival_inter'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] \"demg_inter\"  \"umsmg_inter\" \"nsmg_inter\" "
+       "[1] \"demg_inter\"     \"figo_inter\"     \"survival_inter\""
       ]
      },
      "metadata": {},
@@ -135,15 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "interesting-schema",
+   "execution_count": 7,
+   "id": "following-forest",
    "metadata": {},
    "outputs": [],
    "source": [
     "inter_figs_list <- c(\n",
     "    mget(\"demg_inter\"),\n",
-    "    mget(\"umsmg_inter\"),\n",
-    "    mget(\"nsmg_inter\")\n",
+    "    mget(\"figo_inter\"),\n",
+    "    mget(\"survival_inter\")\n",
     ")\n",
     "intra_figs_list <- c(\n",
     "    mget(\"CESC_intra\"),\n",
@@ -154,8 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "female-chicken",
+   "execution_count": 8,
+   "id": "basic-librarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "relevant-merchant",
+   "execution_count": 9,
+   "id": "considered-ivory",
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +235,8 @@
     "    plot_grid(NULL, labels = c(\"B\"), label_size = label_text_size),\n",
     "    plot_grid(\n",
     "        demg_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
-    "        umsmg_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
-    "        nsmg_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "        figo_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
+    "        survival_inter + theme(plot.margin = unit(c(0, 0, 0, 0), \"cm\")),\n",
     "        nrow = 1,\n",
     "        # Proportional sizes\n",
     "#         rel_widths = c(n_demg, n_figo, n_surv),\n",
@@ -230,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "manufactured-education",
+   "execution_count": null,
+   "id": "dense-account",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "international-testament",
+   "id": "logical-garage",
    "metadata": {},
    "outputs": [],
    "source": []
