Figures & analysis updated for V12.

--- a/feature_selection_analysis/multinomial_en.ipynb
+++ b/feature_selection_analysis/multinomial_en.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "amended-director",
+   "id": "instructional-galaxy",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "advanced-senegal",
+   "id": "numerous-fiction",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "numeric-truth",
+   "id": "vertical-rally",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "declared-proceeding",
+   "id": "lyric-projector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "valid-consensus",
+   "id": "brief-talent",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "senior-musician",
+   "id": "agricultural-jimmy",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "artificial-cooling",
+   "id": "italian-russian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "conditional-basin",
+   "id": "welcome-nutrition",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "consistent-sucking",
+   "id": "solved-astrology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "surface-samuel",
+   "id": "aging-fluid",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "forbidden-collar",
+   "id": "opening-logistics",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "purple-auction",
+   "id": "velvet-session",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "sonic-plaintiff",
+   "id": "completed-essex",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "protected-genetics",
+   "id": "overall-cowboy",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "prepared-accessory",
+   "id": "narrative-promise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compliant-american",
+   "id": "smoking-cleaning",
    "metadata": {},
    "source": [
     "## Weighted baseline"
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "intelligent-villa",
+   "id": "handy-contemporary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "endless-fortune",
+   "id": "dietary-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "faced-impossible",
+   "id": "active-algeria",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "northern-gothic",
+   "id": "curious-selection",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "developed-jacket",
+   "id": "brief-check",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "utility-darkness",
+   "id": "weighted-police",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "alpine-links",
+   "id": "identified-intake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,16 +698,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "corporate-advance",
+   "execution_count": 29,
+   "id": "offensive-contemporary",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>s327:</strong> 6"
+      ],
+      "text/latex": [
+       "\\textbf{s327:} 6"
+      ],
+      "text/markdown": [
+       "**s327:** 6"
+      ],
+      "text/plain": [
+       "s327 \n",
+       "   6 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<strong>s414:</strong> 20"
+      ],
+      "text/latex": [
+       "\\textbf{s414:} 20"
+      ],
+      "text/markdown": [
+       "**s414:** 20"
+      ],
+      "text/plain": [
+       "s414 \n",
+       "  20 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# extra_meta_df <- tibble(\n",
+    "#     cv_mr_model$index\n",
+    "# )\n",
+    "\n",
+    "# Subtract 1 for intercept\n",
+    "cv_mr_model$nzero[best_idx] - 1\n",
+    "cv_mr_model$nzero[kept_idx] - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "accessible-tracker",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kept_df <- as.matrix(coef(cv_mr_model, s = mask_lambda)$figo_stage_1)[-1, 1] %>%\n",
+    "    as_tibble(rownames = \"geneID\") %>%\n",
+    "    rename(kept = value)\n",
+    "best_df <- as.matrix(coef(cv_mr_model, s = cv_mr_model$lambda.min)$figo_stage_1)[-1, 1] %>%\n",
+    "    as_tibble(rownames = \"geneID\") %>%\n",
+    "    rename(best = value)\n",
+    "best_kept_df <- inner_join(kept_df, best_df, by = \"geneID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "eastern-coverage",
    "metadata": {},
    "outputs": [],
    "source": [
     "if (save_res) {\n",
     "    write_tsv(important_gene_df, paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_en_multinom_results.tsv\"))\n",
     "    write_tsv(fit_details_df, paste0(dirs$analysis_dir, \"/model_opt/\", unified_dsets[dset_idx], \"_en_mr_fit_data.tsv\"))\n",
+    "    write_tsv(best_kept_df, paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_en_multinom_full_best_kept_coef.tsv\"))\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "upper-shadow",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
