--- a/meta_analysis/network_meta.ipynb
+++ b/meta_analysis/network_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "generic-mortgage",
+   "id": "opposed-wrapping",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "provincial-workplace",
+   "id": "organizational-information",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,20 +99,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "satisfactory-console",
+   "id": "local-practice",
    "metadata": {},
    "outputs": [],
    "source": [
     "dset_idx <- 3\n",
     "p_mm_thresh <- 0.05\n",
     "q_me_thresh <- 0.05\n",
-    "save_results <- TRUE"
+    "save_results <- FALSE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "valuable-works",
+   "id": "velvet-exclusion",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "respective-newfoundland",
+   "id": "dying-sucking",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "understanding-bishop",
+   "id": "fallen-guitar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "outdoor-institution",
+   "id": "wanted-convenience",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "forward-philadelphia",
+   "id": "human-psychology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "provincial-comparative",
+   "id": "global-science",
    "metadata": {},
    "outputs": [],
    "source": []
