--- a/figures/figure_3.ipynb
+++ b/figures/figure_3.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "instrumental-johnston",
+   "id": "federal-donna",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------ tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m --------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "upset-advancement",
+   "id": "dress-prerequisite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "unnecessary-myanmar",
+   "execution_count": 17,
+   "id": "considerable-nothing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
     "small_text_size <- 8\n",
     "family <- \"ArialMT\"\n",
     "dpi <- 320\n",
-    "fig1_ht <- 5\n",
-    "fig1_wd <- 6"
+    "ht <- 8.5\n",
+    "wd <- 6.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dying-vertex",
+   "id": "early-triple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "composite-engine",
+   "id": "governing-mumbai",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "residential-colonial",
+   "id": "acute-occupation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "centered-uncle",
+   "id": "beautiful-converter",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "abstract-chosen",
+   "id": "configured-withdrawal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "polyphonic-yesterday",
+   "id": "sitting-liquid",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "smooth-pakistan",
+   "id": "military-cambodia",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "tough-nancy",
+   "id": "authorized-pound",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "hired-vessel",
+   "id": "editorial-florida",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "structured-journey",
+   "id": "neither-toronto",
    "metadata": {},
    "outputs": [
     {
@@ -439,18 +439,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "welcome-facial",
+   "execution_count": 18,
+   "id": "entitled-timing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(fig3, filename = paste0(dirs$figures_dir, \"/paneled/figure3.png\"), dpi = dpi, height = 8.5, width = 6)"
+    "ggsave(fig3, filename = paste0(dirs$figures_dir, \"/paneled/figure3.png\"), dpi = dpi, height = ht, width = wd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clean-native",
+   "id": "happy-verification",
    "metadata": {},
    "outputs": [],
    "source": []
