--- a/meta_analysis/gene_list_overlaps_meta.ipynb
+++ b/meta_analysis/gene_list_overlaps_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "civilian-stereo",
+   "id": "apparent-russell",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------ tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m --------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "statewide-threshold",
+   "id": "improving-scottish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "false-daughter",
+   "id": "inside-funds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "genuine-donor",
+   "id": "threatened-entertainment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "willing-monte",
+   "id": "protected-dietary",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-----------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "peripheral-things",
+   "id": "better-remark",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "crude-meditation",
+   "id": "fresh-sugar",
    "metadata": {},
    "outputs": [
     {
@@ -219,48 +219,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "monetary-latin",
+   "execution_count": 24,
+   "id": "olympic-librarian",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl>\n",
-       "\t<dt>$unified_cervical_data</dt>\n",
-       "\t\t<dd>251</dd>\n",
-       "\t<dt>$unified_uterine_data</dt>\n",
-       "\t\t<dd>177</dd>\n",
-       "\t<dt>$unified_uterine_endometrial_data</dt>\n",
-       "\t\t<dd>207</dd>\n",
-       "</dl>\n"
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>unified_cervical_data</dt><dd>251</dd><dt>unified_uterine_data</dt><dd>177</dd><dt>unified_uterine_endometrial_data</dt><dd>207</dd></dl>\n"
       ],
       "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$unified\\_cervical\\_data] 251\n",
-       "\\item[\\$unified\\_uterine\\_data] 177\n",
-       "\\item[\\$unified\\_uterine\\_endometrial\\_data] 207\n",
-       "\\end{description}\n"
+       "\\begin{description*}\n",
+       "\\item[unified\\textbackslash{}\\_cervical\\textbackslash{}\\_data] 251\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_data] 177\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_endometrial\\textbackslash{}\\_data] 207\n",
+       "\\end{description*}\n"
       ],
       "text/markdown": [
-       "$unified_cervical_data\n",
-       ":   251\n",
-       "$unified_uterine_data\n",
-       ":   177\n",
-       "$unified_uterine_endometrial_data\n",
+       "unified_cervical_data\n",
+       ":   251unified_uterine_data\n",
+       ":   177unified_uterine_endometrial_data\n",
        ":   207\n",
-       "\n",
        "\n"
       ],
       "text/plain": [
-       "$unified_cervical_data\n",
-       "[1] 251\n",
-       "\n",
-       "$unified_uterine_data\n",
-       "[1] 177\n",
-       "\n",
-       "$unified_uterine_endometrial_data\n",
-       "[1] 207\n"
+       "           unified_cervical_data             unified_uterine_data \n",
+       "                             251                              177 \n",
+       "unified_uterine_endometrial_data \n",
+       "                             207 "
       ]
      },
      "metadata": {},
@@ -269,53 +260,44 @@
    ],
    "source": [
     "figo_sig_lists <- mapply(intersect, mapply(union, figo_umsmg_lists, figo_nsmg_lists), demg_lists)\n",
-    "figo_sig_lists %>% map(length)"
+    "figo_sig_lists %>% map(length) %>% unlist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "imposed-effort",
+   "execution_count": 23,
+   "id": "affecting-castle",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl>\n",
-       "\t<dt>$unified_cervical_data</dt>\n",
-       "\t\t<dd>33</dd>\n",
-       "\t<dt>$unified_uterine_data</dt>\n",
-       "\t\t<dd>18</dd>\n",
-       "\t<dt>$unified_uterine_endometrial_data</dt>\n",
-       "\t\t<dd>26</dd>\n",
-       "</dl>\n"
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>unified_cervical_data</dt><dd>33</dd><dt>unified_uterine_data</dt><dd>18</dd><dt>unified_uterine_endometrial_data</dt><dd>26</dd></dl>\n"
       ],
       "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$unified\\_cervical\\_data] 33\n",
-       "\\item[\\$unified\\_uterine\\_data] 18\n",
-       "\\item[\\$unified\\_uterine\\_endometrial\\_data] 26\n",
-       "\\end{description}\n"
+       "\\begin{description*}\n",
+       "\\item[unified\\textbackslash{}\\_cervical\\textbackslash{}\\_data] 33\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_data] 18\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_endometrial\\textbackslash{}\\_data] 26\n",
+       "\\end{description*}\n"
       ],
       "text/markdown": [
-       "$unified_cervical_data\n",
-       ":   33\n",
-       "$unified_uterine_data\n",
-       ":   18\n",
-       "$unified_uterine_endometrial_data\n",
+       "unified_cervical_data\n",
+       ":   33unified_uterine_data\n",
+       ":   18unified_uterine_endometrial_data\n",
        ":   26\n",
-       "\n",
        "\n"
       ],
       "text/plain": [
-       "$unified_cervical_data\n",
-       "[1] 33\n",
-       "\n",
-       "$unified_uterine_data\n",
-       "[1] 18\n",
-       "\n",
-       "$unified_uterine_endometrial_data\n",
-       "[1] 26\n"
+       "           unified_cervical_data             unified_uterine_data \n",
+       "                              33                               18 \n",
+       "unified_uterine_endometrial_data \n",
+       "                              26 "
       ]
      },
      "metadata": {},
@@ -324,53 +306,44 @@
    ],
    "source": [
     "survival_sig_lists <- mapply(intersect, survival_lists, demg_lists)\n",
-    "survival_sig_lists %>% map(length)"
+    "survival_sig_lists %>% map(length) %>% unlist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "hungry-essay",
+   "execution_count": 22,
+   "id": "color-detail",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl>\n",
-       "\t<dt>$unified_cervical_data</dt>\n",
-       "\t\t<dd>13</dd>\n",
-       "\t<dt>$unified_uterine_data</dt>\n",
-       "\t\t<dd>3</dd>\n",
-       "\t<dt>$unified_uterine_endometrial_data</dt>\n",
-       "\t\t<dd>9</dd>\n",
-       "</dl>\n"
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>unified_cervical_data</dt><dd>13</dd><dt>unified_uterine_data</dt><dd>3</dd><dt>unified_uterine_endometrial_data</dt><dd>9</dd></dl>\n"
       ],
       "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$unified\\_cervical\\_data] 13\n",
-       "\\item[\\$unified\\_uterine\\_data] 3\n",
-       "\\item[\\$unified\\_uterine\\_endometrial\\_data] 9\n",
-       "\\end{description}\n"
+       "\\begin{description*}\n",
+       "\\item[unified\\textbackslash{}\\_cervical\\textbackslash{}\\_data] 13\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_data] 3\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_endometrial\\textbackslash{}\\_data] 9\n",
+       "\\end{description*}\n"
       ],
       "text/markdown": [
-       "$unified_cervical_data\n",
-       ":   13\n",
-       "$unified_uterine_data\n",
-       ":   3\n",
-       "$unified_uterine_endometrial_data\n",
+       "unified_cervical_data\n",
+       ":   13unified_uterine_data\n",
+       ":   3unified_uterine_endometrial_data\n",
        ":   9\n",
-       "\n",
        "\n"
       ],
       "text/plain": [
-       "$unified_cervical_data\n",
-       "[1] 13\n",
-       "\n",
-       "$unified_uterine_data\n",
-       "[1] 3\n",
-       "\n",
-       "$unified_uterine_endometrial_data\n",
-       "[1] 9\n"
+       "           unified_cervical_data             unified_uterine_data \n",
+       "                              13                                3 \n",
+       "unified_uterine_endometrial_data \n",
+       "                               9 "
       ]
      },
      "metadata": {},
@@ -379,13 +352,13 @@
    ],
    "source": [
     "figo_survival_sig_lists <- mapply(intersect, figo_sig_lists, survival_sig_lists)\n",
-    "figo_survival_sig_lists %>% map(length)"
+    "figo_survival_sig_lists %>% map(length) %>% unlist()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "behavioral-mason",
+   "id": "employed-school",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "acquired-terry",
+   "id": "natural-bandwidth",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "blocked-upper",
+   "id": "living-generic",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "polish-compound",
+   "id": "found-immigration",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "hispanic-senegal",
+   "id": "global-closure",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "based-budapest",
+   "id": "little-membership",
    "metadata": {},
    "outputs": [
     {
@@ -651,48 +624,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "swiss-robert",
+   "execution_count": 21,
+   "id": "cooked-routine",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<dl>\n",
-       "\t<dt>$unified_cervical_data</dt>\n",
-       "\t\t<dd>42</dd>\n",
-       "\t<dt>$unified_uterine_data</dt>\n",
-       "\t\t<dd>14</dd>\n",
-       "\t<dt>$unified_uterine_endometrial_data</dt>\n",
-       "\t\t<dd>22</dd>\n",
-       "</dl>\n"
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>unified_cervical_data</dt><dd>42</dd><dt>unified_uterine_data</dt><dd>14</dd><dt>unified_uterine_endometrial_data</dt><dd>22</dd></dl>\n"
       ],
       "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$unified\\_cervical\\_data] 42\n",
-       "\\item[\\$unified\\_uterine\\_data] 14\n",
-       "\\item[\\$unified\\_uterine\\_endometrial\\_data] 22\n",
-       "\\end{description}\n"
+       "\\begin{description*}\n",
+       "\\item[unified\\textbackslash{}\\_cervical\\textbackslash{}\\_data] 42\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_data] 14\n",
+       "\\item[unified\\textbackslash{}\\_uterine\\textbackslash{}\\_endometrial\\textbackslash{}\\_data] 22\n",
+       "\\end{description*}\n"
       ],
       "text/markdown": [
-       "$unified_cervical_data\n",
-       ":   42\n",
-       "$unified_uterine_data\n",
-       ":   14\n",
-       "$unified_uterine_endometrial_data\n",
+       "unified_cervical_data\n",
+       ":   42unified_uterine_data\n",
+       ":   14unified_uterine_endometrial_data\n",
        ":   22\n",
-       "\n",
        "\n"
       ],
       "text/plain": [
-       "$unified_cervical_data\n",
-       "[1] 42\n",
-       "\n",
-       "$unified_uterine_data\n",
-       "[1] 14\n",
-       "\n",
-       "$unified_uterine_endometrial_data\n",
-       "[1] 22\n"
+       "           unified_cervical_data             unified_uterine_data \n",
+       "                              42                               14 \n",
+       "unified_uterine_endometrial_data \n",
+       "                              22 "
       ]
      },
      "metadata": {},
@@ -703,13 +667,13 @@
     "figo_umsmg_demg_lists <- mapply(intersect, figo_umsmg_lists, demg_lists)\n",
     "figo_nsmg_demg_lists <- mapply(intersect, figo_nsmg_lists, demg_lists)\n",
     "figo_demg_umsmg_nsmg_overlap <- mapply(intersect, figo_umsmg_demg_lists, figo_nsmg_demg_lists)\n",
-    "figo_demg_umsmg_nsmg_overlap %>% map(length)"
+    "figo_demg_umsmg_nsmg_overlap %>% map(length) %>% unlist()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "uniform-threshold",
+   "id": "bridal-large",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupied-influence",
+   "id": "sufficient-tract",
    "metadata": {},
    "source": [
     "# Quick numbers for figures"
@@ -771,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "latin-heavy",
+   "id": "tribal-testament",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "smooth-blast",
+   "id": "understanding-making",
    "metadata": {},
    "outputs": [
     {
