--- a/meta_analysis/dataset_sizes.ipynb
+++ b/meta_analysis/dataset_sizes.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "educated-weight",
+   "id": "accurate-hampton",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "level-deputy",
+   "id": "weird-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "affected-invitation",
+   "id": "signal-smart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +61,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "joined-bidding",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'unified_uterine_data'"
+      ],
+      "text/latex": [
+       "'unified\\_uterine\\_data'"
+      ],
+      "text/markdown": [
+       "'unified_uterine_data'"
+      ],
+      "text/plain": [
+       "[1] \"unified_uterine_data\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unified_dsets[dset_idx]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "southeast-heater",
+   "id": "czech-projector",
    "metadata": {},
    "source": [
     "# Overall"
@@ -70,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "appointed-horse",
+   "execution_count": 5,
+   "id": "electoral-despite",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  Hugo_Symbol = \u001b[31mcol_character()\u001b[39m\n",
@@ -88,7 +117,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -107,8 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "threaded-presence",
+   "execution_count": 6,
+   "id": "placed-radical",
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "cutting-attitude",
+   "execution_count": 7,
+   "id": "sacred-grace",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gorgeous-separation",
+   "id": "distant-correspondence",
    "metadata": {},
    "source": [
     "# Tumor & normal"
@@ -173,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "twenty-belle",
+   "execution_count": 8,
+   "id": "champion-opera",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +211,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
       "  condition = \u001b[31mcol_character()\u001b[39m,\n",
@@ -199,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "religious-contemporary",
+   "execution_count": 9,
+   "id": "suitable-greene",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laden-variance",
+   "id": "recovered-german",
    "metadata": {},
    "source": [
     "# Survival"
@@ -281,10 +310,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "protected-flour",
+   "execution_count": 10,
+   "id": "finnish-somalia",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
+      "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  vital_status = \u001b[31mcol_character()\u001b[39m,\n",
+      "  survival_time = \u001b[32mcol_double()\u001b[39m,\n",
+      "  figo_stage = \u001b[31mcol_character()\u001b[39m,\n",
+      "  days_to_last_follow_up = \u001b[32mcol_double()\u001b[39m,\n",
+      "  days_to_death = \u001b[32mcol_double()\u001b[39m,\n",
+      "  age_at_diagnosis = \u001b[32mcol_double()\u001b[39m,\n",
+      "  age_at_index = \u001b[32mcol_double()\u001b[39m,\n",
+      "  height = \u001b[32mcol_double()\u001b[39m,\n",
+      "  weight = \u001b[32mcol_double()\u001b[39m,\n",
+      "  bmi = \u001b[32mcol_double()\u001b[39m,\n",
+      "  race = \u001b[31mcol_character()\u001b[39m,\n",
+      "  ethnicity = \u001b[31mcol_character()\u001b[39m\n",
+      ")\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  geneID = \u001b[31mcol_character()\u001b[39m\n",
+      ")\n",
+      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  geneID = \u001b[31mcol_character()\u001b[39m\n",
+      ")\n",
+      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Load and filter survival data\n",
     "survival_path <- paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/survival_data.tsv\")\n",
@@ -314,10 +387,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "premier-context",
+   "execution_count": 11,
+   "id": "developmental-prague",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "152"
+      ],
+      "text/latex": [
+       "152"
+      ],
+      "text/markdown": [
+       "152"
+      ],
+      "text/plain": [
+       "[1] 152"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "27"
+      ],
+      "text/latex": [
+       "27"
+      ],
+      "text/markdown": [
+       "27"
+      ],
+      "text/plain": [
+       "[1] 27"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.177631578947368"
+      ],
+      "text/latex": [
+       "0.177631578947368"
+      ],
+      "text/markdown": [
+       "0.177631578947368"
+      ],
+      "text/plain": [
+       "[1] 0.1776316"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "full_cohort <- nrow(norm_matrisome_counts_t_df)\n",
     "dec_cohort <- nrow(norm_survival_counts_t_df)\n",
