Updated some meta analysis.

--- a/meta_analysis/gene_list_category_meta.ipynb
+++ b/meta_analysis/gene_list_category_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cellular-transportation",
+   "id": "changing-accommodation",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "heavy-covering",
+   "id": "specific-filename",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "daily-composer",
+   "id": "constant-advisory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dynamic-minimum",
+   "id": "mighty-duration",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "numerical-hypothesis",
+   "execution_count": 5,
+   "id": "initial-yacht",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  hugo_symbol = \u001b[31mcol_character()\u001b[39m,\n",
       "  entrez_gene_id = \u001b[32mcol_double()\u001b[39m\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-beverage",
+   "id": "funky-mileage",
    "metadata": {},
    "source": [
     "# Matrisome overview"
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "metric-pathology",
+   "execution_count": 6,
+   "id": "figured-impression",
    "metadata": {},
    "outputs": [
     {
@@ -213,8 +213,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "delayed-uniform",
+   "execution_count": 18,
+   "id": "unexpected-advocacy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`summarise()` has grouped output by 'division'. You can override using the `.groups` argument.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>division</th><th scope=col>category</th><th scope=col>n</th><th scope=col>division_n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Core matrisome      </td><td>Collagens              </td><td> 44</td><td>274</td></tr>\n",
+       "\t<tr><td>Core matrisome      </td><td>ECM Glycoproteins      </td><td>195</td><td>274</td></tr>\n",
+       "\t<tr><td>Core matrisome      </td><td>Proteoglycans          </td><td> 35</td><td>274</td></tr>\n",
+       "\t<tr><td>Matrisome-associated</td><td>ECM Regulators         </td><td>238</td><td>753</td></tr>\n",
+       "\t<tr><td>Matrisome-associated</td><td>ECM-affiliated Proteins</td><td>171</td><td>753</td></tr>\n",
+       "\t<tr><td>Matrisome-associated</td><td>Secreted Factors       </td><td>344</td><td>753</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " division & category & n & division\\_n\\\\\n",
+       " <chr> & <chr> & <int> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Core matrisome       & Collagens               &  44 & 274\\\\\n",
+       "\t Core matrisome       & ECM Glycoproteins       & 195 & 274\\\\\n",
+       "\t Core matrisome       & Proteoglycans           &  35 & 274\\\\\n",
+       "\t Matrisome-associated & ECM Regulators          & 238 & 753\\\\\n",
+       "\t Matrisome-associated & ECM-affiliated Proteins & 171 & 753\\\\\n",
+       "\t Matrisome-associated & Secreted Factors        & 344 & 753\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 4\n",
+       "\n",
+       "| division &lt;chr&gt; | category &lt;chr&gt; | n &lt;int&gt; | division_n &lt;int&gt; |\n",
+       "|---|---|---|---|\n",
+       "| Core matrisome       | Collagens               |  44 | 274 |\n",
+       "| Core matrisome       | ECM Glycoproteins       | 195 | 274 |\n",
+       "| Core matrisome       | Proteoglycans           |  35 | 274 |\n",
+       "| Matrisome-associated | ECM Regulators          | 238 | 753 |\n",
+       "| Matrisome-associated | ECM-affiliated Proteins | 171 | 753 |\n",
+       "| Matrisome-associated | Secreted Factors        | 344 | 753 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  division             category                n   division_n\n",
+       "1 Core matrisome       Collagens                44 274       \n",
+       "2 Core matrisome       ECM Glycoproteins       195 274       \n",
+       "3 Core matrisome       Proteoglycans            35 274       \n",
+       "4 Matrisome-associated ECM Regulators          238 753       \n",
+       "5 Matrisome-associated ECM-affiliated Proteins 171 753       \n",
+       "6 Matrisome-associated Secreted Factors        344 753       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "matrisome_df %>%\n",
+    "    dplyr::group_by(division, category) %>%\n",
+    "    summarize(n = n()) %>%\n",
+    "    group_by(division) %>%\n",
+    "    mutate(division_n = sum(n)) %>%\n",
+    "    ungroup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "stock-agriculture",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legal-ethics",
+   "id": "assumed-lottery",
    "metadata": {},
    "source": [
     "# FIGO UMSMG $\\cap$ DEMG"
@@ -326,10 +410,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "standard-machinery",
+   "execution_count": 8,
+   "id": "grave-cross",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>category</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Collagens              </td><td> 4</td></tr>\n",
+       "\t<tr><td>ECM Glycoproteins      </td><td>15</td></tr>\n",
+       "\t<tr><td>ECM Regulators         </td><td>19</td></tr>\n",
+       "\t<tr><td>ECM-affiliated Proteins</td><td> 8</td></tr>\n",
+       "\t<tr><td>Secreted Factors       </td><td>24</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " category & n\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Collagens               &  4\\\\\n",
+       "\t ECM Glycoproteins       & 15\\\\\n",
+       "\t ECM Regulators          & 19\\\\\n",
+       "\t ECM-affiliated Proteins &  8\\\\\n",
+       "\t Secreted Factors        & 24\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 5 × 2\n",
+       "\n",
+       "| category &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Collagens               |  4 |\n",
+       "| ECM Glycoproteins       | 15 |\n",
+       "| ECM Regulators          | 19 |\n",
+       "| ECM-affiliated Proteins |  8 |\n",
+       "| Secreted Factors        | 24 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  category                n \n",
+       "1 Collagens                4\n",
+       "2 ECM Glycoproteins       15\n",
+       "3 ECM Regulators          19\n",
+       "4 ECM-affiliated Proteins  8\n",
+       "5 Secreted Factors        24"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "matrisome_df %>%\n",
     "    dplyr::filter(geneID %in% intersect(figo_umsmg_list, demg_list)) %>%\n",
@@ -339,10 +480,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "split-theta",
+   "execution_count": 9,
+   "id": "polar-trout",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "101"
+      ],
+      "text/latex": [
+       "101"
+      ],
+      "text/markdown": [
+       "101"
+      ],
+      "text/plain": [
+       "[1] 101"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "322"
+      ],
+      "text/latex": [
+       "322"
+      ],
+      "text/markdown": [
+       "322"
+      ],
+      "text/plain": [
+       "[1] 322"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "618"
+      ],
+      "text/latex": [
+       "618"
+      ],
+      "text/markdown": [
+       "618"
+      ],
+      "text/plain": [
+       "[1] 618"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "207"
+      ],
+      "text/latex": [
+       "207"
+      ],
+      "text/markdown": [
+       "207"
+      ],
+      "text/plain": [
+       "[1] 207"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.282401091405184"
+      ],
+      "text/latex": [
+       "0.282401091405184"
+      ],
+      "text/markdown": [
+       "0.282401091405184"
+      ],
+      "text/plain": [
+       "[1] 0.2824011"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.346938775510204"
+      ],
+      "text/latex": [
+       "0.346938775510204"
+      ],
+      "text/markdown": [
+       "0.346938775510204"
+      ],
+      "text/plain": [
+       "[1] 0.3469388"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "figo_umsmg_list %>% length()\n",
     "figo_sig_list %>% length()\n",
@@ -356,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "destroyed-glossary",
+   "id": "black-province",
    "metadata": {},
    "source": [
     "# Survival UMSMG $\\cap$ DEMG"
@@ -364,10 +614,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dietary-baker",
+   "execution_count": 10,
+   "id": "contemporary-proxy",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>category</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Collagens              </td><td>1</td></tr>\n",
+       "\t<tr><td>ECM Glycoproteins      </td><td>7</td></tr>\n",
+       "\t<tr><td>ECM Regulators         </td><td>5</td></tr>\n",
+       "\t<tr><td>ECM-affiliated Proteins</td><td>5</td></tr>\n",
+       "\t<tr><td>Secreted Factors       </td><td>8</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " category & n\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Collagens               & 1\\\\\n",
+       "\t ECM Glycoproteins       & 7\\\\\n",
+       "\t ECM Regulators          & 5\\\\\n",
+       "\t ECM-affiliated Proteins & 5\\\\\n",
+       "\t Secreted Factors        & 8\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 5 × 2\n",
+       "\n",
+       "| category &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Collagens               | 1 |\n",
+       "| ECM Glycoproteins       | 7 |\n",
+       "| ECM Regulators          | 5 |\n",
+       "| ECM-affiliated Proteins | 5 |\n",
+       "| Secreted Factors        | 8 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  category                n\n",
+       "1 Collagens               1\n",
+       "2 ECM Glycoproteins       7\n",
+       "3 ECM Regulators          5\n",
+       "4 ECM-affiliated Proteins 5\n",
+       "5 Secreted Factors        8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "matrisome_df %>%\n",
     "    dplyr::filter(geneID %in% intersect(survival_umsmg_list, demg_list)) %>%\n",
@@ -377,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pending-gambling",
+   "id": "legendary-plasma",
    "metadata": {},
    "source": [
     "# FIGO NSMG $\\cap$ DEMG"
@@ -385,10 +692,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "intensive-singles",
+   "execution_count": 11,
+   "id": "standing-diagram",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 6 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>category</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Collagens              </td><td> 7</td></tr>\n",
+       "\t<tr><td>ECM Glycoproteins      </td><td>32</td></tr>\n",
+       "\t<tr><td>ECM Regulators         </td><td>40</td></tr>\n",
+       "\t<tr><td>ECM-affiliated Proteins</td><td>35</td></tr>\n",
+       "\t<tr><td>Proteoglycans          </td><td> 2</td></tr>\n",
+       "\t<tr><td>Secreted Factors       </td><td>43</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 6 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " category & n\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Collagens               &  7\\\\\n",
+       "\t ECM Glycoproteins       & 32\\\\\n",
+       "\t ECM Regulators          & 40\\\\\n",
+       "\t ECM-affiliated Proteins & 35\\\\\n",
+       "\t Proteoglycans           &  2\\\\\n",
+       "\t Secreted Factors        & 43\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 6 × 2\n",
+       "\n",
+       "| category &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Collagens               |  7 |\n",
+       "| ECM Glycoproteins       | 32 |\n",
+       "| ECM Regulators          | 40 |\n",
+       "| ECM-affiliated Proteins | 35 |\n",
+       "| Proteoglycans           |  2 |\n",
+       "| Secreted Factors        | 43 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  category                n \n",
+       "1 Collagens                7\n",
+       "2 ECM Glycoproteins       32\n",
+       "3 ECM Regulators          40\n",
+       "4 ECM-affiliated Proteins 35\n",
+       "5 Proteoglycans            2\n",
+       "6 Secreted Factors        43"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "matrisome_df %>%\n",
     "    dplyr::filter(geneID %in% intersect(figo_nsmg_list, demg_list)) %>%\n",
@@ -399,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "novel-enterprise",
+   "id": "european-columbia",
    "metadata": {},
    "outputs": [],
    "source": []
