New figures & EA object result write-out.

--- a/enrichment_analysis/granular_figo_ea.ipynb
+++ b/enrichment_analysis/granular_figo_ea.ipynb
@@ -3,13 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "attached-flood",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "id": "hispanic-hurricane",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -176,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "premium-reservoir",
+   "id": "supreme-economics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "finite-sensitivity",
+   "id": "faced-literature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "nuclear-processor",
+   "id": "cross-tiffany",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "adapted-ecology",
+   "id": "front-butter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "assured-alarm",
+   "id": "suspended-spirituality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,25 +253,28 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "charged-sitting",
+   "id": "female-combine",
    "metadata": {},
    "outputs": [],
    "source": [
-    "figo_umsmg_demg_go_df <- enrichGO(figo_umsmg_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE) %>%\n",
+    "figo_umsmg_demg_go <- enrichGO(figo_umsmg_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)\n",
+    "figo_umsmg_demg_go_df <- figo_umsmg_demg_go %>%\n",
     "    rutils::make_ea_df(ea_type = \"GO\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "incomplete-potter",
+   "id": "amino-workplace",
    "metadata": {},
    "outputs": [],
    "source": [
+    "figo_nsmg_demg_go <- list()\n",
     "figo_nsmg_demg_go_dfs <- list()\n",
     "for (n in names(figo_nsmg_demg_dfs)) {\n",
     "    # Get GO results for each sig. module\n",
-    "    figo_nsmg_demg_go_dfs[[n]] <- enrichGO(figo_nsmg_demg_dfs[[n]]$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE) %>%\n",
+    "    figo_nsmg_demg_go[[n]] <- enrichGO(figo_nsmg_demg_dfs[[n]]$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)\n",
+    "    figo_nsmg_demg_go_dfs[[n]] <- figo_nsmg_demg_go[[n]] %>%\n",
     "        rutils::make_ea_df(ea_type = \"GO\")\n",
     "}"
    ]
@@ -284,11 +282,15 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cooperative-upset",
+   "id": "greater-pride",
    "metadata": {},
    "outputs": [],
    "source": [
     "if (save_res) {\n",
+    "    save(\n",
+    "        figo_umsmg_demg_go, figo_nsmg_demg_go,\n",
+    "        file = paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_granular_enrichment_results.RData\")\n",
+    "    )\n",
     "    figo_umsmg_demg_go_df %>% write_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_figo_umsmg_demg_go.tsv\"))\n",
     "    for (n in names(figo_nsmg_demg_go_dfs)) {\n",
     "        figo_nsmg_demg_go_dfs[[n]] %>% write_tsv(paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_figo_nsmg_demg_\", n,\"_go.tsv\"))\n",
